--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,6 @@
         android:theme="@style/Theme.BudgetMaster"
         tools:targetApi="31">
         <activity
-            android:name=".ChangePassword"
-            android:exported="false" />
-        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
@@ -26,10 +23,13 @@
         </activity>
         <activity
             android:name=".SignInActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".SignUpActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
+        <activity
+            android:name=".ChangePassword"
+            android:exported="true" />
     </application>
 
 </manifest>
