--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.BudgetMaster"
         tools:targetApi="31">
         <activity
-            android:name=".ExpenseDetailsWallet"
+            android:name=".ui.activities.ExpenseDetailsWallet"
             android:exported="false" />
         <activity
             android:name=".ui.activities.MyWallet"
