--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.BudgetMaster"
         tools:targetApi="31">
         <activity
+            android:name=".ui.activities.EditBudget"
+            android:exported="false" />
+        <activity
             android:name=".ui.activities.CreateGroupExpense"
             android:exported="false" />
         <activity
