--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         tools:targetApi="31">
         <activity
             android:name=".ui.activities.BudgetExpenseDetails"
+            android:windowSoftInputMode="stateUnspecified|adjustResize"
             android:exported="false" />
         <activity
             android:name=".ui.activities.EditBudget"
