--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
             android:exported="false" />
         <activity
             android:name=".ui.activities.CreateGroupExpense"
+            android:windowSoftInputMode="stateUnspecified|adjustResize"
             android:exported="false" />
         <activity
             android:name=".ui.activities.BudgetDetails"
