--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,16 +13,19 @@
         android:theme="@style/Theme.BudgetMaster"
         tools:targetApi="31">
         <activity
-            android:name=".ui.activities.BudgetExpenseDetails"
-            android:windowSoftInputMode="stateUnspecified|adjustResize"
+            android:name=".ui.activities.GroupSettlement"
             android:exported="false" />
+        <activity
+            android:name=".ui.activities.BudgetExpenseDetails"
+            android:exported="false"
+            android:windowSoftInputMode="stateUnspecified|adjustResize" />
         <activity
             android:name=".ui.activities.EditBudget"
             android:exported="false" />
         <activity
             android:name=".ui.activities.CreateGroupExpense"
-            android:windowSoftInputMode="stateUnspecified|adjustResize"
-            android:exported="false" />
+            android:exported="false"
+            android:windowSoftInputMode="stateUnspecified|adjustResize" />
         <activity
             android:name=".ui.activities.BudgetDetails"
             android:exported="false" />
